syntax = "proto2";

package auctionmark;

enum Tables {
    REGION = 0;
    GLOBAL_ATTRIBUTE_GROUP = 1;
    GLOBAL_ATTRIBUTE_VALUE = 2;
    CATEGORY = 3;
    USER = 4;
    USER_ATTRIBUTE = 5;
    USER_WATCH = 6;
    ITEM = 7;
    ITEM_BID = 8;
    ITEM_FEEDBACK= 9;
    ITEM_ATTRIBUTE = 10;
    ITEM_IMAGE = 11;
    ITEM_COMMENT = 12;
    ITEM_MAX_BID = 13;
    ITEM_PURCHASE = 14;
    USER_ITEM = 15;
  }

message RegionRow {
  required uint32 r_id = 1;
  required string r_name = 2;
}

message GlobalAttributeGroupRow {
  required uint32 gag_id = 1;
  required uint32 gag_c_id = 2;
  required string gag_name = 3;
}

message GlobalAttributeValueRow {
  required uint32 gav_id = 1;
  required uint32 gav_gag_id = 2;
  required string gav_name = 3;
}

message CategoryRow {
  required uint32 c_id = 1;
  required string c_name = 2;
  required uint32 c_parent_id = 3;
}

message UserRow {
  required uint32 u_id = 1;
  required uint32 u_rating = 2;
  required double u_balance = 3;
  required uint32 u_created = 4;
  required uint32 u_r_id = 5;
  required string u_sattr0 = 6;
  required string u_sattr1 = 7;
  required string u_sattr2 = 8;
  required string u_sattr3 = 9;
  required string u_sattr4 = 10;
  required string u_sattr5 = 11;
  required string u_sattr6 = 12;
  required string u_sattr7 = 13;
}

message UserAttributeRow {
  required uint32 ua_id = 1;
  required uint32 ua_u_id = 2;
  required string ua_name = 3;
  required string ua_value = 4;
  required uint32 u_created = 5;
}

message ItemRow {
  required uint32 i_id = 1;
  required uint32 i_u_id = 2;
  required uint32 i_c_id = 3;
  required string i_name = 4;
  required string i_description = 5;
  required string i_user_attributes = 6;
  required double i_initial_price = 7;
  required double i_current_price = 8;
  required uint32 i_num_bids = 9;
  required uint32 i_num_images = 10;
  required uint32 i_num_global_attrs = 11;
  required uint32 i_start_date = 12;
  required uint32 i_end_date = 13;
  required uint32 i_status = 14;
}

message ItemImageRow {
  required uint32 ii_id = 1;
  required uint32 ii_i_id = 2;
  required uint32 ii_u_id = 3;
  required string ii_path = 4;
}

message ItemCommentRow {
  required uint32 ic_id = 1;
  required uint32 ic_i_id = 2;
  required uint32 ic_u_id = 3;
  required uint32 ic_buyer_id = 4;
  required uint32 ic_date = 5;
  required string ic_question = 6;
  required string ic_response = 7;
}

message ItemFeedbackRow {
  required uint32 if_id = 1;
  required uint32 if_i_id = 2;
  required uint32 if_u_id = 3;
  required uint32 if_buyer_id = 4;
  required uint32 if_rating = 5;
  required uint32 if_date = 6;
  required string if_comment = 7;
}

message ItemBidRow {
  required uint32 ib_id = 1;
  required uint32 ib_i_id = 2;
  required uint32 ib_u_id = 3;
  required uint32 ib_buyer_id = 4;
  required double ib_bid = 5;
  required double ib_max_bid = 6;
  required uint32 ib_created = 7;
  required uint32 ib_updated = 8;
}

message ItemMaxBidRow {
  required uint32 imb_i_id = 1;
  required uint32 imb_u_id = 2;
  required uint32 imb_ib_id = 3;
  required uint32 imb_ib_i_id = 4;
  required uint32 imb_ib_u_id = 5;
  required uint32 imb_created = 6;
  required uint32 imb_updated = 7;
}

message ItemPurchaseRow {
  required uint32 ip_id = 1;
  required uint32 ip_ib_id = 2;
  required uint32 ip_i_id = 3;
  required uint32 ip_u_id = 4;
  required uint32 ip_date = 5;
}

message UserItemRow {
  required uint32 ui_u_id = 1;
  required uint32 ui_i_id = 2;
  required uint32 ui_seller_id = 3;
  required uint32 ui_created = 4;
}
